--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,6 @@ jobs:
           retention-days: 1
 
 
-
   make_requirements:
     container: cariad/ci:1.4.0
     runs-on: ubuntu-20.04
@@ -50,19 +49,12 @@ jobs:
           retention-days: 1
 
 
-
   test:
     needs: make_requirements
     runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version:
-          - "3.0"
-          - "3.1"
-          - "3.2"
-          - "3.3"
-          - "3.4"
-          - "3.5"
           - "3.6"
           - "3.7"
           - "3.8"
@@ -83,14 +75,13 @@ jobs:
         with:
           # A cache per Python version is less efficient, but stops parallel
           # runs trampling on each other.
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}  # yamllint disable-line rule:line-length
           path: ~/.cache/pip
 
       - if: steps.cache-pip.outputs.cache-hit != 'true'
         run: pip install -r requirements.txt
 
       - run: pytest
-
 
 
   publish_to_github:
@@ -119,7 +110,6 @@ jobs:
           asset_name: ${{ env.DISTRIBUTABLE }}
           asset_path: ${{ env.DISTRIBUTABLE }}
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-
 
 
   publish_to_pypi:
