--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,6 @@ jobs:
           path: dist
           retention-days: 1
 
-      - run: pipenv lock --dev --requirements > requirements.txt
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: requirements
-          path: requirements.txt
-          retention-days: 1
-
 
   test:
     needs: build
@@ -63,24 +55,10 @@ jobs:
 
       - uses: actions/download-artifact@v2
         with:
-          name: requirements
+          name: distributable
 
-      - id: pip-cache
-        run: echo "::set-output name=dir::$(pip cache dir)"
-
-      - id: cache-pip
-        uses: actions/cache@v1
-        with:
-          # A cache per Python version is less efficient, but stops parallel
-          # runs trampling on each other.
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}  # yamllint disable-line rule:line-length
-          path: ${{ steps.pip-cache.outputs.dir }}
-
-      - if: steps.cache-pip.outputs.cache-hit != 'true'
-        run: pip install -r requirements.txt
-
-      - run: python -m pytest
-
+      - run: pipenv run pip install "$(ls *.whl)"
+      - run: python tests/smoke.py
 
   publish_to_github:
     if: startsWith(github.ref, 'refs/tags')
