--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
 [tool.pytest.ini_options]
 testpaths = "tests"
 addopts = "--cov=lstr --cov-branch --cov-report=html --cov-report=term-missing:skip-covered --cov-report=xml --no-cov-on-fail"
+log_cli_level = "DEBUG"
